[package]
name = "rust-msdfgen"
version = "0.1.0"
authors = ["Chris Sampson <csampson@appliedsystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon_path = "0.12"
lyon_geom = "0.12"
bitflags = "1.0"
arrayvec = "0.4"
freetype-rs = "*"
image = "*"
euclid = "0.19"